--- a/trad/style2.css
+++ b/trad/style2.css
@@ -1,6 +1,19 @@
-section{
-    display: flex;
+*{
+    font-family: "Gill Sans", sans-serif;
 }
-table{
+
+body > header:nth-child(1) > ul:nth-child(1) {
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style-type: none;
+    background-color: bisque;
+    padding: 0px;
+    padding-right: 20px;
 }
+
+body > header:nth-child(1) > ul:nth-child(1) > h1:nth-child(1) {
+flex-grow: 1;
+}
+  
+  
